# tuleaj-plugin-aggregator

./: .gitignore  README.md  SYSTEM_TRAY_FEATURE_SUMMARY.md  build_fixed.py  config.toml  config.toml.backup  pyproject.toml  test_plugin_management.py
docs/: PySide6_QML聚合工具开发文档.md  PySide6_QML聚合工具技术架构文档.md  dependency_management.md
envs/test/: pyproject.toml
envs/test2/: pyproject.toml
plugins/system_monitor/: README.md  main.py  plugin.ini  pyproject.toml  system_monitor.qml  system_monitor_backend.py
plugins/system_monitor/%SystemDrive%/ProgramData/Microsoft/Windows/Caches/: {6AF0698E-D558-4F6E-9B3C-3716689AF493}.2.ver0x0000000000000001.db  {DDF571F2-BE98-426D-8288-1A9A39C3FDA2}.2.ver0x0000000000000001.db
plugins/test_plugin/: README.md  main.py  pyproject.toml
src/: main.py  resources.qrc
src/core/: config_bridge.py  config_manager.py  dependency_manager.py  plugin_bridge.py  plugin_process_manager.py
src/ui/: EnvironmentManagementWindow.qml  FileSelector.qml  MessageManager.qml  MessageToast.qml  PluginDocumentViewer.qml  PluginItem.qml  PluginListPanel.qml  SettingsMirror.qml  SettingsPlugin.qml  SettingsPython.qml  SettingsTheme.qml  SettingsWindow.qml  main.qml
src/utils/: exception_handler.py  logger.py
tests/: test_utils.py
