[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "resolved-dependencies"
version = "1.0.0"
description = "Resolved dependencies for plugin environment"
requires-python = ">=3.11"
dependencies = [
    "psutil>=7.1.0",
    "pyside6>=6.9.3",
]

[tool.hatch.build.targets.wheel]
packages = ["."]
